--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "@testing-library/user-event": "^13.5.0",
     "@theatre/core": "^0.7.2",
     "@theatre/r3f": "^0.7.2",
+    "@theatre/studio": "^0.7.2",
+    "assert": "^2.1.0",
+    "console-browserify": "^1.2.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.3.1",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "three": "^0.165.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
