--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "three": "^0.165.0",
     "util": "^0.12.5",
