--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@theatre/r3f": "^0.7.2",
     "@theatre/studio": "^0.7.2",
     "assert": "^2.1.0",
+    "clsx": "^2.1.1",
     "console-browserify": "^1.2.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
